Fix Image Stretching in Safari

--- a/assets/common-blocks/cover/_cover.sass
+++ b/assets/common-blocks/cover/_cover.sass
@@ -2,9 +2,11 @@
     display: flex
 
 .cover__cover-img
+    height: 100%
     margin: 0 -20px
     width: calc(100% + 40px)
 
     @include tablet
         margin: 0
         width: 100%
+        height: 100%
